force-app/main/default/objects/Comparison_Session_Member__c/Comparison_Session_Member__c.object-meta.xml
<CustomObject>
    <label>Comparison Session Member</label>
    <pluralLabel>Comparison Session Members</pluralLabel>
    <nameField>
        <label>Comparison Session Member Name</label>
        <type>AutoNumber</type>
        <displayFormat>CSM-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>