force-app/main/default/objects/Comparison_Session_Member__c/fields/Comparison_Session__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Session__c</fullName>
    <label>Comparison Session</label>
    <type>MasterDetail</type>
    <referenceTo>Comparison_Session__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
</CustomField>