force-app/main/default/objects/Comparison_Session_Member__c/fields/Invite_Status__c.field-meta.xml
<CustomField>
    <fullName>Invite_Status__c</fullName>
    <label>Invite Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>