force-app/main/default/objects/Comparison_Session_Member__c/fields/Invite_Token__c.field-meta.xml
<CustomField>
    <fullName>Invite_Token__c</fullName>
    <label>Invite Token</label>
    <type>EncryptedText</type>
    <length>100</length>
    <maskChar>*</maskChar>
    <maskType>all</maskType>
</CustomField>