force-app/main/default/objects/Comparison_Session_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>CoBuyer</fullName>
                <label>Co-Buyer</label>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>