force-app/main/default/objects/Comparison_Session_Member__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>Member User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Comparison Member</relationshipLabel>
    <relationshipName>Comparison_Member</relationshipName>
</CustomField>