force-app/main/default/objects/Comparison_Session_Member__c/fields/Vote__c.field-meta.xml
<CustomField>
    <fullName>Vote__c</fullName>
    <label>Vote</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LoveIt</fullName>
                <label>Love it</label>
            </value>
            <value>
                <fullName>LikeIt</fullName>
                <default>true</default>
                <label>Like it</label>
            </value>
            <value>
                <fullName>NotSure</FullName>
                <label>Not sure yet</label>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>