force-app/main/default/objects/Comparison_Session_Member__c/fields/Votes__c.field-meta.xml
<CustomField>
    <fullName>Votes__c</fullName>
    <label>Votes JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>